feat: init protoc-gen-go-errors-code
